deploy/base/service.yaml
# Copyright (c) 2026 Erick Bourgeois, mediatore
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: mediatore
spec:
  selector: { app.kubernetes.io/name: mediatore }
  ports:
    - { name: user, port: 8080, targetPort: user }
    - { name: sandbox, port: 8443, targetPort: sandbox }
